--- a/Catalog/Catalog.API/Catalog.API.csproj
+++ b/Catalog/Catalog.API/Catalog.API.csproj
@@ -6,4 +6,9 @@
         <ImplicitUsings>enable</ImplicitUsings>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Catalog.Application\Catalog.Application.csproj" />
+      <ProjectReference Include="..\Catalog.Infraestructure\Catalog.Infraestructure.csproj" />
+    </ItemGroup>
+
 </Project>
